--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=3000
 DATABASE_URL=mongodb://localhost:27017/YatriWheels
-SECRET_KEY=PRASHANT
+SECRET_KEY=
 
 
-KHALTI_URL=https://dev.khalti.com/api/v2/epayment/initiate/
-KHALTI_API_KEY=e41e4bd0e12e4f4d84e389dfe2d0c8e6
+KHALTI_URL=
+KHALTI_API_KEY=
